make some initial changes to update content and fix spacing

--- a/src/sections/about/styles.scss
+++ b/src/sections/about/styles.scss
@@ -3,6 +3,7 @@
     position: relative;
     .row {
         display: flex;
+        width: 100%;
         flex-wrap: inherit;
         overflow: hidden;
         min-height: 100%;
